objects/Deal_Support__c.object
<CustomObject>
    <fields>
        <fullName>PS_Only_no_license_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PS Only, no license deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_POR_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POR (Plan of Record) Reference - Deal Support request</description>
        <label>POR Reference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Deal_Support__c.Support_Area__c</field>
                <operation>equals</operation>
                <value>POR Review</value>
            </filterItems>
            <infoMessage>Please pick the associated Plan of Record (POR) to link to this DSR</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Deal_Support__c</referenceTo>
        <relationshipLabel>Plan Of Record References</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_POR_Review_Scheduled_Date__c</fullName>
        <formula>IF(ISBLANK(PS_POR_Reference__r.POR_Schedule_Date__c), &apos;&apos;, TEXT(PS_POR_Reference__r.POR_Schedule_Date__c))</formula>
        <label>POR Review Scheduled Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Project_Application__c</fullName>
        <description>PS Project Aplication</description>
        <label>Project Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Use Case</fullName>
                </value>
                <value>
                    <fullName>Modified Standard Use Case</fullName>
                </value>
                <value>
                    <fullName>Custom Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_SMART_DSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this DSR is a new PS SMART DSR or not</description>
        <label>PS SMART DSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_SMART_Email__c</fullName>
        <description>Email target for the PS SMART DSR distributions</description>
        <label>PS SMART Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Owner_Email__c</fullName>
        <description>Stores the Partner Account Owner Email Address</description>
        <label>Partner Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Deal_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Deal Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Opportunity_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Portal Opportunity Registration</label>
        <referenceTo>partner_portal_prospect__c</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescribed_PureSuccess_Offer__c</fullName>
        <description>This field is only to be used for the request type &apos; PureSuccess Center&apos;</description>
        <inlineHelpText>This field is only to be used for the request type &apos; PureSuccess Center&apos;</inlineHelpText>
        <label>Prescribed PureSuccess Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equip</fullName>
                </value>
                <value>
                    <fullName>Equip with A La Carte</fullName>
                </value>
                <value>
                    <fullName>Guide</fullName>
                </value>
                <value>
                    <fullName>Guide with A La Carte</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Drive With A La Carte</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Updated_Date__c</fullName>
        <label>Previous Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Churn_Reason__c</fullName>
        <inlineHelpText>Please elaborate if needed on churn reason in the Description field below</inlineHelpText>
        <label>Primary Churn Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Genesys Migration</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Other-Notes Provided</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Price/Budget</fullName>
                </value>
                <value>
                    <fullName>Product Defects</fullName>
                </value>
                <value>
                    <fullName>Product Features</fullName>
                </value>
                <value>
                    <fullName>Production/Solution Fit</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deal Support (Primary Contact)</relationshipLabel>
        <relationshipName>Deal_Support2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Play__c</fullName>
        <label>Primary Play</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2019 Play 3 Digital Service</fullName>
                </value>
                <value>
                    <fullName>2019 Play 4 Digital Sales</fullName>
                </value>
                <value>
                    <fullName>2019 Play 5 Automation at Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Solution__c</fullName>
        <label>Primary Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Desktop</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Workload Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductDeactivated__c</fullName>
        <label>Product Deactivated</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CCDB_Cancelled__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Cancellation_Date__c</fullName>
        <label>Product Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound Voice</fullName>
                </value>
                <value>
                    <fullName>SIP Server</fullName>
                </value>
                <value>
                    <fullName>SIP Endpoint</fullName>
                </value>
                <value>
                    <fullName>Call Qualification/Parking</fullName>
                </value>
                <value>
                    <fullName>Smart Link</fullName>
                </value>
                <value>
                    <fullName>WebRTC</fullName>
                </value>
                <value>
                    <fullName>Virtual Hold</fullName>
                </value>
                <value>
                    <fullName>SBC</fullName>
                </value>
                <value>
                    <fullName>Web Engagement</fullName>
                </value>
                <value>
                    <fullName>Mobile Engagement</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
                <value>
                    <fullName>Social Engagement</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Web Callback</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Web Collaboration (Co-browse)</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Outbound Voice</fullName>
                </value>
                <value>
                    <fullName>Call Progress Detection</fullName>
                </value>
                <value>
                    <fullName>Proactive Contact</fullName>
                </value>
                <value>
                    <fullName>Proactive Customer Communications</fullName>
                </value>
                <value>
                    <fullName>Mobile Marketing</fullName>
                </value>
                <value>
                    <fullName>Workforce Management</fullName>
                </value>
                <value>
                    <fullName>Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>Quality Management</fullName>
                </value>
                <value>
                    <fullName>Skills Assessor</fullName>
                </value>
                <value>
                    <fullName>Training Manager</fullName>
                </value>
                <value>
                    <fullName>Speech Analytics</fullName>
                </value>
                <value>
                    <fullName>Text Analytics</fullName>
                </value>
                <value>
                    <fullName>Intelligent Workload Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Desc__c</fullName>
        <label>Products and Discounts (if applicable)</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Primary_Solution__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Agent Scripting</fullName>
                </value>
                <value>
                    <fullName>Call Progress Detection</fullName>
                </value>
                <value>
                    <fullName>Call Qualification &amp; Parking</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>CIM Platform</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
                <value>
                    <fullName>Customized Desktop (SDK)</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Genesys Voice Platform</fullName>
                </value>
                <value>
                    <fullName>Gplus Adapters (SAP, Siebel, etc)</fullName>
                </value>
                <value>
                    <fullName>High Availability</fullName>
                </value>
                <value>
                    <fullName>Inbound Voice</fullName>
                </value>
                <value>
                    <fullName>Info Mart</fullName>
                </value>
                <value>
                    <fullName>Intelligent Workload Distribution</fullName>
                </value>
                <value>
                    <fullName>Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>Interactive Insights</fullName>
                </value>
                <value>
                    <fullName>Mobile Engagement</fullName>
                </value>
                <value>
                    <fullName>Mobile Marketing</fullName>
                </value>
                <value>
                    <fullName>Outbound Voice</fullName>
                </value>
                <value>
                    <fullName>Proactive Contact</fullName>
                </value>
                <value>
                    <fullName>Proactive Customer Communications</fullName>
                </value>
                <value>
                    <fullName>Pulse</fullName>
                </value>
                <value>
                    <fullName>Quality Management</fullName>
                </value>
                <value>
                    <fullName>SBC</fullName>
                </value>
                <value>
                    <fullName>SIP Endpoint</fullName>
                </value>
                <value>
                    <fullName>SIP Server</fullName>
                </value>
                <value>
                    <fullName>Skills Assessor</fullName>
                </value>
                <value>
                    <fullName>Smart Link</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Expiry_Date__c</fullName>
        <label>Quote Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Escalation__c</fullName>
        <label>Reason for Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Showstopper – Customer unable to provide service</fullName>
                </value>
                <value>
                    <fullName>Revenue impacting – Genesys unable to close deal</fullName>
                </value>
                <value>
                    <fullName>Revenue impacting – Customer losing revenue without feature/functionality</fullName>
                </value>
                <value>
                    <fullName>Service impacting – Customer unable to provide desired-level of service</fullName>
                </value>
                <value>
                    <fullName>Impacting Customer Deployment</fullName>
                </value>
                <value>
                    <fullName>Impacting Customer Timeline</fullName>
                </value>
                <value>
                    <fullName>Update required -– Customer desires update regardless of votes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Needed_by__c</fullName>
        <label>Reference Needed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Opportunity Region</description>
        <inlineHelpText>Opportunity Region</inlineHelpText>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Deal_Incentives__c</fullName>
        <label>Request Deal Incentives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incentive 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Due_Date__c</fullName>
        <defaultValue>TODAY() + 1</defaultValue>
        <label>Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Duration__c</fullName>
        <formula>IF(  ISPICKVAL(Status__c, &apos;Completed&apos;), (Date_Time_Completed__c - CreatedDate) , (NOW() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type_SS__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Order Management On Premise</fullName>
                </value>
                <value>
                    <fullName>Revenue Recognition On Premise</fullName>
                    <label>Accounting On Premise</label>
                </value>
                <value>
                    <fullName>Credit Collections On Premise</fullName>
                </value>
                <value>
                    <fullName>Account Receivables On Premise</fullName>
                </value>
                <value>
                    <fullName>Order Management Cloud</fullName>
                </value>
                <value>
                    <fullName>Revenue Recognition Cloud</fullName>
                    <label>Accounting  Cloud</label>
                </value>
                <value>
                    <fullName>Credit Collections Cloud</fullName>
                </value>
                <value>
                    <fullName>Account Receivables Cloud</fullName>
                </value>
                <value>
                    <fullName>On Premise Pricing</fullName>
                </value>
                <value>
                    <fullName>Simplified Packaging and Pricing Initiative</fullName>
                </value>
                <value>
                    <fullName>Business Edition Cloud and Enterprise Edition Cloud Pricing</fullName>
                </value>
                <value>
                    <fullName>Premier Edition Pricing</fullName>
                </value>
                <value>
                    <fullName>Deal Economics</fullName>
                </value>
                <value>
                    <fullName>Net Pricing</fullName>
                </value>
                <value>
                    <fullName>Discounting</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Terms</fullName>
                </value>
                <value>
                    <fullName>Pre-Set Discount Levels</fullName>
                </value>
                <value>
                    <fullName>Deal Approval Process</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Requests</fullName>
                </value>
                <value>
                    <fullName>PS Service or Offer Information</fullName>
                </value>
                <value>
                    <fullName>Implementation Question</fullName>
                </value>
                <value>
                    <fullName>Genesys Care Rate, Pricing Structure, Genesys Care Modelling</fullName>
                </value>
                <value>
                    <fullName>License Entitlement</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Cloud (all related cloud requests)</fullName>
                </value>
                <value>
                    <fullName>Business Consulting Inquiry</fullName>
                </value>
                <value>
                    <fullName>Financial Analytics and Strategy</fullName>
                </value>
                <value>
                    <fullName>Product feature/functionality enquiry</fullName>
                </value>
                <value>
                    <fullName>Unable to determine Solution or Product Manager contact</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_User_Type__c</fullName>
        <label>Request  User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Action__c</fullName>
        <label>Requested Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Focus_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactivate Line of Business</fullName>
                </value>
                <value>
                    <fullName>Change Status</fullName>
                </value>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Merge Records</fullName>
                </value>
                <value>
                    <fullName>Update Name or Other Field Values</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Inactivate Account</fullName>
                    <isActive>false</isActive>
                    <label>Inactivate Account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_PureBridge_Levers__c</fullName>
        <description>DL 7/16 Requested by Molly. The values will be input by the AE upon initial submission and used as informational data for the SWAT team.</description>
        <inlineHelpText>L1 No Genesys Cloud Fees Until Avaya Contract Expires 
L2 Avaya-to-Genesys Tech Cert Scholarships 
L3 Partner Only PureBridge Acceleration Incentive 
L4 No-Cost Messaging Apps Trial w/Genesys Cloud (Advisor only) 
L5 Perpetual Prem Migration Incentive</inlineHelpText>
        <label>Requested PureBridge Levers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lever 1</fullName>
                </value>
                <value>
                    <fullName>Lever 2</fullName>
                </value>
                <value>
                    <fullName>Lever 3</fullName>
                </value>
                <value>
                    <fullName>Lever 5</fullName>
                </value>
                <value>
                    <fullName>Lever 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <formula>Requester__r.Email</formula>
        <label>Requester Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requstor_Region__c</fullName>
        <description>This is the Sub Region from the User record of the Opportunity Owner</description>
        <formula>text(Requester__r.Owner_Sub_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Sub Region from the User record of the Opportunity Owner</inlineHelpText>
        <label>Requestor Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training/user issue</fullName>
                </value>
                <value>
                    <fullName>System issue</fullName>
                </value>
                <value>
                    <fullName>Admin action</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Engagement_DSR_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SC Engagement DSR Number</label>
        <referenceTo>DSR_SCEngagement__c</referenceTo>
        <relationshipLabel>Deal Support (SC Engagement DSR Number)</relationshipLabel>
        <relationshipName>Deal_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Engagement_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solution Consultant Engagement Form - Added for POR DSR</description>
        <label>SC Engagement Form</label>
        <referenceTo>Wow_Request_Form__c</referenceTo>
        <relationshipLabel>Deal Support</relationshipLabel>
        <relationshipName>Deal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOW_Delivery_Date__c</fullName>
        <description>What it does: Date that the PS Statement of Work was delivered
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>SOW Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SOW_PS_Acceptance_Date__c</fullName>
        <description>What it does: Date that the PS Statement of Work was accepted by PS
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>SOW PS Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SOW_Request_Date__c</fullName>
        <description>What it does: Date that the PS Statement of Work was requested
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>SOW Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SOW_Sales_Acceptance_Date__c</fullName>
        <description>What it does: Date that the PS Statement of Work was accepted by Sales
Downstream impact: Affects tracking on the Professional Services DSRs and reporting
Which department is owner: Professional Services</description>
        <label>SOW Sales Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Acceptance_Date__c</fullName>
        <description>The most recent date that the Sales Acceptance was recorded for the DSR</description>
        <label>Sales Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Acceptance_History__c</fullName>
        <description>History of Acceptance / Rejection for the DSR by the Sales representatives</description>
        <label>Sales Acceptance History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Acceptance_Notes__c</fullName>
        <description>Sales Acceptance notes for the DSR</description>
        <label>Sales Acceptance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Acceptance__c</fullName>
        <description>Indicates Sales Acceptance of the DSR request and content</description>
        <label>Sales Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>